some css modification

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         
     </head>
     <body>
+        <header>
+            <h1>2048</h1>
+        </header>
         <div class="score-container">
             <div class="score-title">score</div>
             <splan id="score">0</splan>
