modifications refresh + colors

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <div class="score-container">
             <div class="score-title">score</div>
             <splan id="score">0</splan>
+            <br>
+            <button class="start" type="button" value="Refresh Button" onClick="refresh()">New Game</button>
         </div>
         <div id="result"></div>
         <div class="grid"></div>
