--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         
 
-        <script src="/index.js" charset="utf-8"></script>
+        <script src="./index.js" charset="utf-8"></script>
         
 
     </body>
